<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    

    <RelativeLayout
        android:layout_weight="2"
        android:id="@+id/r_left"
        android:visibility="visible"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:text="@string/test_model"
            android:textColor="#000000"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="80dp"
            android:textSize="18dp"
            android:text="@string/test_model_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9" />


        <TextView
            android:id="@+id/tv_1"
            android:text="@string/zhu_left"
            android:layout_width="wrap_content"
            android:textSize="18dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/textView9"
            android:layout_alignEnd="@+id/textView9" />

        <Button
            android:onClick="all_close"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="全部料\n口关闭"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="80dp"
            android:background="@drawable/selector_btn" />

        <Button
            android:onClick="all_open"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="全部料\n口打开"
            android:textSize="20dp"
            android:textColor="#000000"
            android:background="@drawable/selector_btn"
            android:id="@+id/button"
            android:layout_below="@+id/textView9"
            android:layout_alignLeft="@+id/textView9"
            android:layout_alignStart="@+id/textView9" />

    </RelativeLayout>


    <LinearLayout
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.ice.cj_ice.util.SegmentView
            android:id="@+id/segmentview"
            android:layout_marginTop="50dp"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" >
        </com.ice.cj_ice.util.SegmentView>


        <RelativeLayout
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:background="@drawable/shape_bg_re"
            android:layout_width="550dp"
            android:layout_height="200dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="17dp"
                android:id="@+id/linearLayout2">

                <Button
                    android:text="左"
                    android:onClick="ice_left"
                    android:textColor="#fffe6986"
                    android:textSize="20dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/select_btn"
                    android:layout_width="80dp"
                    android:layout_height="80dp" />

                <Button
                    android:text="中"
                    android:textSize="20dp"
                    android:onClick="ice_middle"
                    android:textColor="#fffe6986"
                    android:layout_margin="10dp"
                    android:background="@drawable/select_btn"
                    android:layout_width="80dp"
                    android:layout_height="80dp" />

                <Button
                    android:text="右"
                    android:textSize="20dp"
                    android:onClick="ice_right"
                    android:id="@+id/rightBtn"
                    android:textColor="#fffe6986"
                    android:layout_margin="10dp"
                    android:background="@drawable/select_btn"
                    android:layout_width="80dp"
                    android:layout_height="80dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="18dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true">

                <Button
                    android:onClick="auto_model"
                    android:text="自动模式"
                    android:layout_margin="10dp"
                    android:background="@drawable/shape_blue"
                    android:layout_width="80dp"
                    android:layout_height="40dp" />

                <Button
                    android:onClick="stop_auto"
                    android:text="停止自动"
                    android:layout_margin="10dp"
                    android:background="@drawable/shape_blue"
                    android:layout_width="80dp"
                    android:layout_height="40dp" />

                <Button
                    android:onClick="ice_clear"
                    android:text="清洗"
                    android:layout_margin="10dp"
                    android:background="@drawable/shape_blue"
                    android:layout_width="80dp"
                    android:layout_height="40dp" />

                <Button
                    android:id="@+id/shortage"
                    android:onClick="ice_isShortage"
                    android:text="落杯器复位"
                    android:layout_margin="10dp"
                    android:background="@drawable/shape_blue"
                    android:layout_width="80dp"
                    android:layout_height="40dp" />

            </LinearLayout>

            <Button
                android:onClick="drop_cup"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="落杯器"
                android:textSize="20dp"
                android:textColor="#fffe6986"
                android:background="@drawable/select_btn"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/cup_machine" />

        </RelativeLayout>



        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_width="550dp"
            android:layout_height="200dp">


            <LinearLayout
                android:layout_weight="3"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:text="1"
                    android:textSize="20dp"
                    android:onClick="blank_one"
                    android:textColor="#fffe6986"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/select_btn"
                    android:layout_width="60dp"
                    android:layout_height="60dp" />
                <Button
                    android:text="2"
                    android:textSize="20dp"
                    android:onClick="blank_two"
                    android:textColor="#fffe6986"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/select_btn"
                    android:layout_width="60dp"
                    android:layout_height="60dp" />
                <Button
                    android:text="3"
                    android:textSize="20dp"
                    android:onClick="blank_three"
                    android:textColor="#fffe6986"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/select_btn"
                    android:layout_width="60dp"
                    android:layout_height="60dp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_weight="1"
                android:padding="50dp"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/arm"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/up_arm"
                    android:visibility="gone"
                    android:textSize="20dp"
                    android:onClick="arm_up"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:text="UP"
                    android:textColor="#fffe6986"
                    android:background="@drawable/select_btn" />


                <Button
                    android:id="@+id/down_arm"
                    android:visibility="gone"
                    android:textSize="20dp"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:text="DOWN"
                    android:onClick="arm_down"
                    android:layout_marginLeft="200dp"
                    android:textColor="#fffe6986"
                    android:background="@drawable/select_btn" />


            </RelativeLayout>


            <LinearLayout
                android:layout_weight="3"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:text="4"
                    android:textSize="20dp"
                    android:onClick="blank_four"
                    android:textColor="#fffe6986"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/select_btn"
                    android:layout_width="60dp"
                    android:layout_height="60dp" />
                <Button
                    android:text="5"
                    android:textSize="20dp"
                    android:onClick="blank_five"
                    android:textColor="#fffe6986"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/select_btn"
                    android:layout_width="60dp"
                    android:layout_height="60dp" />
                <Button
                    android:text="6"
                    android:textSize="20dp"
                    android:onClick="blank_six"
                    android:textColor="#fffe6986"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/select_btn"
                    android:layout_width="60dp"
                    android:layout_height="60dp" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="550dp"
            android:layout_height="80dp">


            <Button
                android:text="旋转台"
                android:onClick="rotate_platform"
                android:textColor="#fffe6986"
                android:background="@drawable/select_btn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <Button
                android:onClick="go_shopping"
                android:text="返回售卖端"
                android:background="@drawable/shape_blue"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>


        <com.ice.cj_ice.util.SegmentView
            android:id="@+id/segmentview_shop"
            android:layout_marginTop="50dp"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true" >
        </com.ice.cj_ice.util.SegmentView>

        <TextView
            android:id="@+id/server_State"
            android:text="正在售卖"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/r_right"
        android:layout_weight="2"
        android:visibility="gone"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_marginTop="29dp"
            android:textSize="18dp"
            android:text="@string/test_arm_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:layout_below="@+id/textView11"
            android:layout_alignRight="@+id/button2"
            android:layout_alignEnd="@+id/button2" />


        <TextView
            android:text="@string/test_arm"
            android:textColor="#000000"
            android:layout_marginTop="24dp"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/tv_2"
            android:layout_alignEnd="@+id/tv_2" />

        <TextView
            android:id="@+id/tv_2"
            android:text="@string/zhu_right"
            android:textSize="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/button2"
            android:layout_alignEnd="@+id/button2" />



        <Button
            android:onClick="stop_arm"
            android:layout_gravity="center_horizontal"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="复位"
            android:textSize="30dp"
            android:textColor="#000000"
            android:layout_marginBottom="21dp"
            android:background="@drawable/selector_btn"
            android:id="@+id/button2"
            android:layout_above="@+id/tv_2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="54dp"
            android:layout_marginEnd="54dp" />

        <Button
            android:onClick="test_arm"
            android:layout_gravity="center_horizontal"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="一键\n测试"
            android:textSize="30dp"
            android:textColor="#000000"
            android:layout_marginBottom="131dp"
            android:background="@drawable/selector_btn"
            android:layout_above="@+id/tv_2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="54dp"
            android:layout_marginEnd="54dp" />

        <Button
            android:onClick="study"
            android:layout_gravity="center_horizontal"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="开启\n示教"
            android:textSize="30dp"
            android:background="@drawable/selector_btn"
            android:textColor="#000000"
            android:id="@+id/studyBtn"
            android:layout_marginTop="33dp"
            android:layout_below="@+id/textView10"
            android:layout_alignRight="@+id/textView10"
            android:layout_alignEnd="@+id/textView10" />
    </RelativeLayout>


</LinearLayout>